add additional annotation

--- a/Notebooks/Chapter 16.ipynb
+++ b/Notebooks/Chapter 16.ipynb
@@ -391,8 +391,15 @@
     "    sigma = pm.Uniform('sigma', y.std()/1000, y.std()*1000)\n",
     "    \n",
     "    # PyMC's Normal likelihood can take either precision or standard deviation as an argument.\n",
-    "    likelihood = pm.Normal('likelihood', mu, sd=sigma, observed=y)\n",
-    "\n",
+    "    likelihood = pm.Normal('likelihood', mu, sd=sigma, observed=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(model)"
    ]
   },
@@ -499,6 +506,80 @@
     "ax4.set_xlabel('$(\\mu - 100)/\\sigma$', fontdict=font_d)\n",
     "\n",
     "plt.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.summary(trace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mean of *mu* is 108ish, mean of *sigma* is 26ish.  What is the mean effect size (e.g., (mean-100)/sigma)?  About 0.3 or so?  Did you forget that *mu* and *sigma* are simply 2 dimensions of a multivariate posterior?  To determine our posterior for the effect size, we need to calculate the effect size for each *mu*-*sigma* **pair** that we have in our trace (our logbook).  Then we can take the mean of these effect sizes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((trace['mu']-100)/trace['sigma']).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fortunately (for you), your initial guess wasn't that far off because *mu* and *sigma* are distributed more or less independently.  But next time you may not be so lucky!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test mu parameter against 100 (definitionally 'average' within the population)\n",
+    "(trace['mu'] > 100).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test mu parameter against 15 (definitionally the SD of the population)\n",
+    "(trace['sigma'] > 15).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test the standardized effect size against zero\n",
+    "# i.e., what is the probability that the mean is > 0 SDs above 100?\n",
+    "(((trace['mu']-100)/trace['sigma']) > 0).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test effect size against 0.1 (e.g., top of Kruschke's ROPE)\n",
+    "# i.e., what is the probability that the mean is > 0.1 SDs above 100?\n",
+    "(((trace['mu']-100)/trace['sigma'])>0.1).mean()"
    ]
   },
   {
@@ -612,8 +693,15 @@
     "    nu_minus1 = pm.Exponential('nu_minus1', 1/29)\n",
     "    nu = pm.Deterministic('nu', nu_minus1+1)\n",
     "    \n",
-    "    likelihood = pm.StudentT('likelihood', nu,  mu, sd=sigma, observed=y)\n",
-    "\n",
+    "    likelihood = pm.StudentT('likelihood', nu,  mu, sd=sigma, observed=y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(model2)"
    ]
   },
@@ -707,7 +795,7 @@
     "# Middle left\n",
     "pm.plot_posterior(trace2['sigma'], point_estimate='mode', ref_val=15, ax=ax3, color=color)\n",
     "ax3.set_xlabel('$\\sigma$', fontdict=font_d)\n",
-    "ax3.set_title('Std. Dev.', fontdict=font_d)\n",
+    "ax3.set_title('Scale', fontdict=font_d)\n",
     "\n",
     "# Middle right\n",
     "pm.plot_posterior((trace2['mu']-100)/trace2['sigma'], point_estimate='mode', ref_val=0,\n",
@@ -722,6 +810,44 @@
     "\n",
     "plt.tight_layout();\n",
     "ax6.set_visible(False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that *sigma* does **not** control the standard deviation of the *t*-distribution.  This means that comparing *sigma* against a value of 15 **is not meaningful**.  More importantly, this means that (*mu* - 100)/*sigma* is **not** a conventional standardized effect size."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pm.summary(trace2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test mu parameter against 100 (definitionally 'average' within the population)\n",
+    "(trace2['mu'] > 100).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lower alpha to see where the vast majority of samples are\n",
+    "alpha = 0.5\n",
+    "#alpha = 0.005\n",
+    "pm.plots.pairplot(trace2, var_names=['mu','sigma','nu'], plot_kwargs={'alpha': alpha}, figsize=(7,7));"
    ]
   },
   {
@@ -869,8 +995,15 @@
     "    nu_minus1 = pm.Exponential('nu_minus1', 1/29)\n",
     "    nu = pm.Deterministic('nu', nu_minus1+1)\n",
     "        \n",
-    "    likelihood = pm.StudentT('likelihood', nu,  mu[grp_idx], sd=sigma[grp_idx], observed=df.Score)\n",
-    "\n",
+    "    likelihood = pm.StudentT('likelihood', nu,  mu[grp_idx], sd=sigma[grp_idx], observed=df.Score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(model3)"
    ]
   },
@@ -1003,6 +1136,53 @@
     "\n",
     "plt.tight_layout();"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Again, the lower right panel is **not** our belief about conventional measures of standardized effect size.  We are using a *t*-distribution, which means that *sigma* is **not** the SD."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean of the placebo group's location parameter\n",
+    "(trace3['mu'][:,0]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean of the 'smart drug' group's location parameter\n",
+    "(trace3['mu'][:,1]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# belief about the difference in location parameters (i.e., the unstandardized effect size)\n",
+    "(trace3['mu'][:,1] - trace3['mu'][:,0]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# probability smart drug group location > placebo group location\n",
+    "(trace3['mu'][:,1] > trace3['mu'][:,0]).mean()"
+   ]
   }
  ],
  "metadata": {
@@ -1021,9 +1201,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
