--- a/Notebooks/Chapter 9.ipynb
+++ b/Notebooks/Chapter 9.ipynb
@@ -340,17 +340,22 @@
     "    \n",
     "    theta = pm.Beta('theta', alpha=omega*(kappa-2)+1, beta=(1-omega)*(kappa-2)+1, shape=n_practitioners)\n",
     "        \n",
-    "    y = pm.Bernoulli('y', theta[practitioner_idx], observed=df.y)    \n",
-    "\n",
+    "    y = pm.Bernoulli('y', theta[practitioner_idx], observed=df.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(hierarchical_model)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -970,8 +975,15 @@
     "    \n",
     "    theta = pm.Beta('theta', 1, 1, shape=n_practitioners)\n",
     "        \n",
-    "    y = pm.Bernoulli('y', theta[practitioner_idx], observed=df.y)\n",
-    "    \n",
+    "    y = pm.Bernoulli('y', theta[practitioner_idx], observed=df.y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(unpooled_model)"
    ]
   },
@@ -1531,8 +1543,15 @@
     "                    (1-omega_c[pripos_idx])*(kappa_c[pripos_idx]-2)+1,\n",
     "                     shape = n_players)\n",
     "    \n",
-    "    y2 = pm.Binomial('y2', n=df2.AtBats.values, p=theta, observed=df2.Hits)\n",
-    "\n",
+    "    y2 = pm.Binomial('y2', n=df2.AtBats.values, p=theta, observed=df2.Hits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pm.model_to_graphviz(hierarchical_model2)"
    ]
   },
@@ -1667,9 +1686,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
